# rustdemo

./: .gitignore  Cargo.toml  README.md  bindings.h  bindings.pyx  build.rs  lib.toml  test.c  test.sh
src/: lib.rs  main.rs
