[package]
name = "rustdemo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
hidapi = "2.5.1"
lazy_static = "1.4.0"
url = "1.0"
thiserror = "1.0.56"
anyhow = "*"
dashmap = "*"
tokio = "*"
tracing = "*"
log = "0.4.20"


[build-dependencies]
cbindgen = "0.26.0"
